--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -16,7 +16,7 @@
 
     .logo {
       width: 150px;
-      margin-top: 100px;
+      margin-top: 60px;
     }
 
     nav {
@@ -56,6 +56,7 @@
 
     @include respond-below(md) {
       .logo {
+        margin-top: 50px;
         width: 150px;
       }
 
@@ -71,10 +72,21 @@
 
   &.scrolled {
     .wrap {
+      height: 50px;
       .logo {
         // opacity: 0;
-        margin-top: 0;
-        transform: scale(0.7);
+        margin-top: 35px;
+        transform: scale(0.6);
+      }
+    }
+
+    @include respond-below(md){
+      .wrap {
+        .logo {
+          // opacity: 0;
+          margin-top: 20px;
+          transform: scale(0.5);
+        }
       }
     }
   }
